charts/step-certificates/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: step-certificates
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: 'false'
spec:
  parentRefs:
    - name: http-gateway
      group: gateway.networking.k8s.io
      kind: Gateway
      namespace: envoy-gateway
      sectionName: https
  hostnames:
    - ca.g4v.dev
  rules:
    - backendRefs:
        - group: gateway.envoyproxy.io
          kind: Backend
          name: step-certificates-https
      matches:
        - path:
            type: PathPrefix
            value: /
